Testing/BSTest/verdict/Test8N0_0.mpr
mscdocument Test8N0;
msc Test8N0;
Simulator: instance;
Strategy: instance;
Simulator: out /*{@0}*/InitDataComplete,1 to Strategy;
Strategy: in /*{@0}*/InitDataComplete,1 from Simulator;
Simulator: out /*{@0}*/ShipsCurrentState,2(1,(: (. 1, 1, 5, 0, 0, 1, (. 30, 30 .), (: 10, 10, 10, 0 :), 0, 0, 0, (. 10, 40 .) .), (. 2, 2, 1, 0, 0, 0, (. 29, 30 .), (: 10, 10, 10, 0 :), 0, 0, 0, (. 10, 40 .) .) :)) to Strategy;
Strategy: in /*{@0}*/ShipsCurrentState,2(1,(: (. 1, 1, 5, 0, 0, 1, (. 30, 30 .), (: 10, 10, 10, 0 :), 0, 0, 0, (. 10, 40 .) .), (. 2, 2, 1, 0, 0, 0, (. 29, 30 .), (: 10, 10, 10, 0 :), 0, 0, 0, (. 10, 40 .) .) :)) from Simulator;
Simulator: out /*{@0}*/VisibleShip,3(1,(: (. 2, 2, 2, 1, 6, (. 30, 30 .) .) :)) to Strategy;
Strategy: in /*{@0}*/VisibleShip,3(1,(: (. 2, 2, 2, 1, 6, (. 30, 30 .) .) :)) from Simulator;
Simulator: out /*{@0}*/StartSimulation,4(1) to Strategy;
Strategy: in /*{@0}*/StartSimulation,4(1) from Simulator;
all: condition /*{@4090}*/ERROR comment '<!TAT_ERR_TIMEOUT(Trace0,Event5)!>';
Simulator: endinstance;
Strategy: endinstance;
endmsc;
